test/corpus/sum_to_100.txt
==============
Sum of 1..100 inclusive
==============

// Adds 1+...+100.
@i // i refers to some mem. location.
M=1 // i=1
@sum // sum refers to some mem. location.
M=0 // sum=0
(LOOP)
@i
D=M // D=i
@100
D=D-A // D=i-100
@END
D;JGT // If (i-100)>0 goto END
@i
D=M // D=i
@sum
M=D+M // sum=sum+i
@i
M=M+1 // i=i+1
@LOOP
0;JMP // Goto LOOP
(END)
@300
@END
0;JMP // Infinite loop

---

(source_file
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (label_def (label_ident))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (comp) (jump))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (dest) (comp))
 (a_inst (label_ident))
 (c_inst (comp) (jump))
 (label_def (label_ident))
 (a_inst (label_ident))
 (a_inst (label_ident))
 (c_inst (comp) (jump))
)
